--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "@types/node": "^12.11.1",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
+    "bootstrap": "^4.3.1",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-dnd": "^9.4.0",
+    "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
     "typescript": "^3.6.4"
